# Project-Rag-Wiki

./: .dockerignore  .gitignore  Dockerfile  README.md  pyproject.toml
.github/workflows/: docker-release.yml
src/kb_service/: __init__.py  __main__.py  app.py  embeddings.py  indexer.py  settings.py  text_utils.py
tests/: test_app.py  test_indexer_packets.py  test_settings.py
