[build-system]
requires = ["setuptools>=69", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "kb-service"
version = "0.0.3"
description = "Repository-scoped MCP knowledge service"
requires-python = ">=3.11"
dependencies = [
  "chromadb==1.5.9",
  "fastapi==0.136.3",
  "python-frontmatter==1.3.0",
  "mcp==1.27.2",
  "sse-starlette==3.4.4",
  "torch==2.12.0+cpu",
  "sentence-transformers==5.5.1",
  "transformers==5.9.0",
  "uvicorn==0.48.0"
]

[tool.setuptools]
package-dir = {"" = "src"}

[tool.setuptools.packages.find]
where = ["src"]
