[build-system]
requires = ["setuptools>=69", "setuptools-scm[toml]>=8", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "kb-service"
dynamic = ["version"]
description = "Repository-scoped MCP knowledge service"
requires-python = ">=3.11"
dependencies = [
  "chromadb==1.5.9",
  "fastapi==0.136.3",
  "python-frontmatter==1.3.0",
  "mcp==1.27.2",
  "sse-starlette==3.4.4",
  "torch==2.12.0+cpu",
  "sentence-transformers==5.5.1",
  "transformers==5.9.0",
  "uvicorn==0.48.0"
]

[tool.setuptools]
package-dir = {"" = "src"}

[tool.setuptools.packages.find]
where = ["src"]

[tool.setuptools_scm]
fallback_version = "0.0.0"
local_scheme = "no-local-version"
